--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>M1alsan</title>
+<style>
+body {
+    margin:0;
+    background:#0a0a0a;
+    color:#eee;
+    font-family: Helvetica, Arial, sans-serif;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+    letter-spacing:2px;
+}
+a {
+    color:#fff;
+    text-decoration:none;
+    font-size:22px;
+    border:1px solid #333;
+    padding:20px 40px;
+    transition:0.3s;
+}
+a:hover {
+    background:#fff;
+    color:#000;
+}
+</style>
+</head>
+<body>
+<a href="/gallery/">ENTER GALLERY</a>
+</body>
+</html>
 
