--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Gallery</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+    <h1>M1ALSAN</h1>
+    <p>Visual Archive</p>
+</header>
+
+<div id="gallery"></div>
+
+<footer>
+    <a href="/">Home</a>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
 
