--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Gallery</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>M1ALSAN – Gallery</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
     <p>Visual Archive</p>
 </header>
 
-<div id="gallery"></div>
+<main id="gallery"></main>
 
 <footer>
     <a href="/">Home</a>
@@ -21,4 +22,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
