--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,21 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>M1ALSAN – Gallery</title>
+<title>M1ALSAN</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <h1>M1ALSAN</h1>
-    <p>Visual Archive</p>
-</header>
-
 <main id="gallery"></main>
-
-<footer>
-    <a href="/">Home</a>
-</footer>
 
 <script src="script.js"></script>
 </body>
