--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>M1ALSAN</title>
+<title>m1alsan</title>
 
 <style>
 body {
@@ -90,7 +90,7 @@ footer {
 
 <div class="container">
     <h1>M1ALSAN</h1>
-    <div class="subtitle">Visual Art • Code • Archive</div>
+    <div class="subtitle">Aesthetics of the ordinary</div>
 
     <div class="divider"></div>
 
