--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>M1ALSAN</title>
+<title>m1alsan</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <main id="gallery"></main>
-
+<a href="../">Home</a>
 <script src="script.js"></script>
 </body>
 </html>
