--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ footer {
 <body>
 
 <div class="container">
-    <h1>M1ALSAN</h1>
+    <h1>Murat Alsan</h1>
     <div class="subtitle">Aesthetics of the ordinary</div>
 
     <div class="divider"></div>
