--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
+<a href="../" class="back-btn">BACK</a>
+  
 <main id="gallery"></main>
-<a href="../">Home</a>
+
 <script src="script.js"></script>
 </body>
 </html>
