--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<a href="../" class="back-btn">BACK</a>
+<a class="back-btn" href="/gallery/">BACK</a>
   
 <main id="gallery"></main>
 
