--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<a class="back-btn" href="/gallery/">BACK</a>
+<a class="back-button" href="/gallery/">BACK</a>
   
 <main id="gallery"></main>
 
